# ao3_api

./: Dockerfile.dev  LICENSE  README.md  TODO.md  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml  requirements.txt
AO3/: requester.py
app/: main.py
app/AO3/: bookmarks.py  chapters.py  comments.py  common.py  requester.py  series.py  session.py  users.py  utils.py  works.py
app/api/: users.py  works.py
app/api/schemas/: users.py  works.py
